# homelab

./: .actrc  .cursorrules  .env.example  .envrc.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .sops.yaml  .tflint.hcl  .yamllint.yaml  Architecture Review.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT_RUNBOOK.md  GOAL.md  GOAL_STREAMING.md  GitOps-main-README.md  README.md  ROADMAP.md  SETUP_COMPLETE.md  SUMMARY.md  Taskfile.yaml  URLS.md  doppler.yaml  install.sh  liste-achats-proxies-sliver.md  omni-help.txt  proxies-sliver-a-imprimer.md  renovate.json
.github/: ACTIONS_USAGE.md  (+8 more)
kubernetes-pulumi/: .tool-versions  Makefile  Pulumi.dev.yaml  Pulumi.local.yaml  Pulumi.oci.yaml  Pulumi.test.yaml  Pulumi.yaml  apps.yaml  coredns-original.yaml  coredns-patched.yaml  doppler.json  gateway-helm-v1.2.1.tgz  nextcloud_import.json  node-prep.yaml  polaris.yaml  pyproject.toml  test_doppler.py
kubernetes-pulumi/authentik/charts/postgresql/: values.yaml
kubernetes-pulumi/docs/: ARCHITECTURE.md  Impelmentation_plan.md  WALKTHROUGHV2.md
kubernetes-pulumi/k8s-apps/: Pulumi.oci.yaml  Pulumi.yaml  __main__.py  full_immich_values.yaml  pyproject.toml  stack.json  test_auth_fullname_values.yaml  test_collision_values.yaml  test_null_fullname_values.yaml  test_ow_fullname_values.yaml
kubernetes-pulumi/k8s-core/: Pulumi.oci.yaml  Pulumi.yaml  __main__.py  install_crds.sh  pyproject.toml  test_imports.py
kubernetes-pulumi/k8s-core/crds/: cnpg.yaml  envoy-gateway.yaml  external-secrets.yaml
kubernetes-pulumi/k8s-storage/: Pulumi.oci.yaml  Pulumi.yaml  __main__.py  pyproject.toml
kubernetes-pulumi/policies/: PulumiPolicy.yaml  __main__.py  requirements.txt
kubernetes-pulumi/scripts/: authentik_lifecycle.py  cleanup_pulumi.py  deployment_check.py  dump_pages.py  nextcloud_external_storage.py  preflight.py  stack_manager.py  test_sso.py  update_crds.py
kubernetes-pulumi/shared/: constants.py
kubernetes-pulumi/shared/apps/: __init__.py  base.py  factory.py  generic.py  loader.py  sso_presets.py
kubernetes-pulumi/shared/storage/: __init__.py  s3_manager.py
kubernetes-pulumi/shared/utils/: __init__.py  authentik.py  cluster.py  preflight.py  schemas.py  storage_validation.py  versions.py
kubernetes-pulumi/src/: __main__.py
kubernetes-pulumi/src/apps/: __init__.py  base.py  generic.py  loader.py
kubernetes-pulumi/src/utils/: cluster.py  schemas.py  versions.py
kubernetes-pulumi/tests/: README.md  conftest.py  test_registry_v2.py
kubernetes-pulumi/tests/dynamic/: README.md  test_app_startup.py  test_connectivity.py  test_network.py  test_network_auto.py  test_pvc_binding.py  test_recovery_regressions.py  test_routing.py  test_routing_auto.py  test_secrets.py  test_secrets_auto.py  test_storage_quotas.py
kubernetes-pulumi/tests/e2e/: kuttl.yaml
kubernetes-pulumi/tests/integration/: test_app_dependencies.py  test_authentik_outpost.py  test_connectivity.py  test_crd_management.py  test_helm_rendering.py  test_helm_validation.py  test_preflight.py  test_secrets_validation.py  test_storagebox_subaccount.py
kubernetes-pulumi/tests/smoke/: test_endpoints.py
kubernetes-pulumi/tests/static/: test_adapters_v2.py  test_authentik_registry.py  test_cloudflare_routing.py  test_convention_resolution.py  test_deployment_readiness.py  test_deployment_validation.py  test_helm_manifests.py  test_helm_values.py  test_image_pull.py  test_image_repositories.py  test_image_tags.py  test_infra.py  test_k8s_manifests.py  test_network_policies.py  test_networking.py  test_secrets.py  test_secrets_mapping.py  test_security_context.py  test_sso_injection.py  test_sso_presets.py  test_storage_class_integrity.py  test_storage_strategy.py  test_storagebox_config.py
kubernetes-pulumi/tests/unit/: test_adapters.py  test_dependencies.py  test_registry_serialization.py  test_storagebox_mocks.py
(+1634 files in other folders)
