[project]
name = "homelab-shared"
version = "0.1.0"
dependencies = [
    "pulumi>=3.224.0",
    "pulumi-kubernetes>=4.26.0",
    "pyyaml>=6.0.3",
    "pydantic>=2.12.5",
    "pulumiverse-doppler>=0.9.0",
    "pulumi-oci>=4.1.0",
    "pulumi-hcloud>=1.32.1",
    "pulumi-command>=1.2.0",
    "pulumi-random>=4.19.1",
    "pulumi-cloudflare>=6.13.0",
    "pulumi-authentik>=2025.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
