[project]
name = "homelab-kubernetes"
version = "0.1.0"
description = "Pulumi Kubernetes configuration for homelab"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.224.0",
    "pulumi-kubernetes>=4.26.0",
    "cdk8s>=2.20.0",
    "constructs>=10.4.0",
    "pyyaml>=6.0.3",
    "doppler-sdk>=1.0.0",
    "pydantic>=2.12.5",
    "pulumiverse-doppler>=0.9.0",
    "pulumi-hcloud>=1.32.1",
    "pulumi-random>=4.19.1",
    "pulumi-command>=1.2.0",
]

# Add parent directory to path so 'shared' module can be imported via PYTHONPATH in scripts

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
